tests/baselines/reference/innerModExport2.errors.txt
tests/cases/compiler/innerModExport2.ts(5,12): error TS1005: ';' expected.
tests/cases/compiler/innerModExport2.ts(7,9): error TS1129: Statement expected.
tests/cases/compiler/innerModExport2.ts(15,5): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/innerModExport2.ts(18,1): error TS1128: Declaration or statement expected.
tests/cases/compiler/innerModExport2.ts(5,5): error TS2304: Cannot find name 'module'.
tests/cases/compiler/innerModExport2.ts(20,7): error TS2339: Property 'NonExportFunc' does not exist on type 'typeof Outer'.


==== tests/cases/compiler/innerModExport2.ts (6 errors) ====
    module Outer {
    
        // inner mod 1
        var non_export_var: number;
        module {
               ~
!!! error TS1005: ';' expected.
        ~~~~~~
!!! error TS2304: Cannot find name 'module'.
            var non_export_var = 0;
            export var export_var = 1;
            ~~~~~~
!!! error TS1129: Statement expected.
    
            function NonExportFunc() { return 0; }
    
            export function ExportFunc() { return 0; }
        }
        var export_var: number;
    
        export var outer_var_export = 0;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        export function outerFuncExport() { return 0; }
    
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    Outer.NonExportFunc();
          ~~~~~~~~~~~~~
!!! error TS2339: Property 'NonExportFunc' does not exist on type 'typeof Outer'.